// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should match snapshot 1`] = `
<select>
  <option
    value=""
  >
    Select Your Favorite Color
  </option>
</select>
`;

exports[`Select should match snapshot with select options 1`] = `
<select>
  <option
    value=""
  >
    Select Your Favorite Color
  </option>
  <option
    value="black"
  >
    Black
  </option>
  <option
    value="white"
  >
    White
  </option>
</select>
`;
